# Talento-Neurodivergente

./: .env.example  .gitignore  Agent.md  CHANGELOG.md  CHECKLIST_ESTADO.md  CLAUDE.md  CRITICAL_ISSUES.md  DISENO_ONE_PAGER_INSTRUCCIONES.md  DISPATCH_06.md  DISPATCH_07.md  DOCUMENTACION_PROYECTO.md  DOCUMENTO_PRAG.md  EMAIL_BUSINESS_ANGEL_TEMPLATE.md  ESTADO_ACTUAL_RESUMIDO.md  FASE_DEL_PROYECTO.md  GIT_STATUS.md  ONE_PAGER_BUSINESS_ANGEL.md  PLAN_TRACTION_RAPIDA_2SEMANAS.md  PROJECT_STATUS.md  README.md  REPO_STATUS_ANALYSIS.md  RESPUESTA_RAPIDA.md  ROADMAP.md  SECURITY_IMPLEMENTATION.md  TODO.md  docker-compose.yml  eslint.config.mjs  jsconfig.json  middleware.js  next.config.mjs  package-lock.json  package.json  playwright.config.ts  prisma.config.ts  tailwind.config.js  tsconfig.json  vitest.config.js
services/auth-service/: Dockerfile  alembic.ini  pyproject.toml
services/auth-service/alembic/: env.py
services/auth-service/alembic/versions/: 001_initial_auth_tables.py
services/auth-service/app/: config.py  main.py
services/auth-service/app/api/: deps.py  schemas.py
services/auth-service/app/infrastructure/: database.py
services/auth-service/tests/unit/: test_admin_stats.py  test_login_use_case.py  test_register_use_case.py  test_user_entity.py  test_value_objects.py
services/matching-service/: Dockerfile  pyproject.toml
services/matching-service/alembic/: env.py
services/matching-service/alembic/versions/: 001_initial_matching_tables.py
services/matching-service/app/: config.py  main.py
services/matching-service/app/api/: deps.py  schemas.py
services/matching-service/app/infrastructure/: database.py
services/matching-service/tests/unit/: test_batch_match_use_case.py  test_calculate_match_use_case.py  test_security_schemas.py  test_trilateral_scorer.py
services/profile-service/: Dockerfile  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js
services/profile-service/alembic/: env.py
services/profile-service/alembic/versions/: 001_initial_profile_tables.py  002_add_job_offers_and_game_scores.py
services/profile-service/app/: config.py  main.py
services/profile-service/app/api/: deps.py  schemas.py
services/profile-service/app/infrastructure/: database.py
services/profile-service/app/templates/: base.html
services/profile-service/shared/: config.py  seed_archetypes.py
services/profile-service/shared/domain/: __init__.py  base_entity.py
services/profile-service/src/: input.css
services/profile-service/tests/integration/: test_messages_api.py
services/profile-service/tests/unit/: test_apply_to_job_use_case.py  test_assessment_entity.py  test_conversation_entity.py  test_create_profile_use_case.py  test_delete_account_use_case.py  test_export_data_use_case.py  test_list_conversations.py  test_manage_consent_use_case.py  test_message_entity.py  test_profile_entity.py  test_register_therapist_use_case.py  test_security_schemas.py  test_send_message.py  test_submit_quiz_use_case.py  test_therapist_profile.py  test_verify_therapist_use_case.py
services/shared/: pyproject.toml
services/shared/shared/: __init__.py  config.py  email_service.py  rate_limiter.py
services/shared/shared/auth/: __init__.py  jwt_utils.py
services/shared/shared/domain/: value_objects.py
services/shared/tests/: test_rate_limiter.py
services/subscription-service/: Dockerfile  alembic.ini  pyproject.toml
services/subscription-service/alembic/: env.py
services/subscription-service/app/: config.py  main.py
services/subscription-service/app/api/: deps.py  schemas.py
services/subscription-service/tests/unit/: test_api_endpoints.py  test_change_plan_use_case.py  (+8 more)
(+465 files in other folders)
