[project]
name = "diversia-profile-service"
version = "2.0.0"
description = "DiversIA Profile Service — User profiles, neurocognitive assessment, onboarding"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.19",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyjwt>=2.8",
    "slowapi>=0.1.9",
    "jinja2>=3.1",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
