[project]
name = "diversia-subscription-service"
version = "2.1.0"
description = "DiversIA Subscription Service — Plans, subscriptions, billing, Stripe integration"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "pydantic[email]>=2.0",
    "pydantic-settings>=2.0",
    "pyjwt>=2.8",
    "slowapi>=0.1.9",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    "diversia-shared",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "aiosqlite>=0.20",
]
stripe = [
    "stripe>=8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
